# lab2B-part08

./: README.md  i2c_bus_scan.uf2
code/: ADPS_REGISTER.h  CMakeLists.txt  i2c_bus_scan.c
